fear : finish swagger
